feat(oauth): token endpoint
