# internal/api/oauth.go
@@ -11,3 +11,9 @@ import (
 func (s Server) StartAuthorizationFlow(ctx echo.Context, params autogen.StartAuthorizationFlowParams) error {
 	return echo.NewHTTPError(http.StatusNotImplemented, "Not Implemented")
 }
+
+// OAuth token endpoint
+	// (POST /oauth/token)
+func (s Server) IssueOauthToken(ctx echo.Context) error {
+	return echo.NewHTTPError(http.StatusNotImplemented, "Not Implemented")
+}
